Music files added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Music Generation</h1>
     <hr>
-    <h3>Note Fader</h3>
+    <h2>Note Fader</h2>
 
     <table>
       <thead>
@@ -84,7 +84,7 @@
     </table>
 
     <hr>
-    <h3>Rhythm Fader</h3>
+    <h2>Rhythm Fader</h2>
 
     <table>
       <thead>
@@ -148,6 +148,283 @@
           <td>
             <audio controls>
               <source src="generated_music/Rhythm Fader/example2/ds_116_rlvl8.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h2>Style Transfer</h2>
+    <h4>High to Low</h4>
+    <table>
+      <thead>
+        <tr>
+          <th>Original</th>
+          <th>Style Output</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1001_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1001_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1001_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1001_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1002_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1002_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1007_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_1007_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_150_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_150_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_301_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_301_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_360_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_360_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_439_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_439_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_50_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_50_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_520_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_520_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_95_arousal=1.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/HighToLow/vgm_95_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h4>Low to High</h4>
+    <table>
+      <thead>
+        <tr>
+          <th>Original</th>
+          <th>Style Output</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1001_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1001_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1004_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1004_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1006_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1006_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1007_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1007_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1008_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_1008_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_38_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_38_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_421_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_421_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_725_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_725_lambda1.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_783_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_783_new.wav" type="audio/wav">
+            </audio>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_910_arousal=0.wav" type="audio/wav">
+            </audio>
+          </td>
+          <td>
+            <audio controls>
+              <source src="generated_music/LowToHigh/vgm_910_new.wav" type="audio/wav">
             </audio>
           </td>
         </tr>
